add email, confirmation mail now works

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,12 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/rent_my_car
 spring.datasource.username=root
 spring.datasource.password=
 
+## Mail configuration
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.username=user
+spring.mail.password=password
+
 ## Hibernate Properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
