change ddl auto to create-drop and rename tbl user to users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## Spring Datasource
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:postgresql://localhost:5432/rent_my_car
 spring.datasource.username=postgres
 spring.datasource.password=postgres
