make subclasses for cartypes and add a bunch of testdata and translations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 ## Spring Datasource
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.sql.init.mode=always
 spring.datasource.url=jdbc:postgresql://localhost:5432/rent_my_car
 spring.datasource.username=postgres
 spring.datasource.password=postgres
@@ -14,3 +15,4 @@ spring.mail.password=password
 
 ## Hibernate Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.hbm2ddl.import_files_sql_extractor=org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
