refactor exceptions to use spring format

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,6 @@ spring.sql.init.mode=always
 spring.datasource.url=jdbc:postgresql://localhost:5432/rent_my_car
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-
 spring.jpa.show-sql=true
 
 ## Mail configuration
@@ -12,6 +11,9 @@ spring.mail.host=localhost
 spring.mail.port=1025
 spring.mail.username=user
 spring.mail.password=password
+
+## Server Settings
+server.error.include-message=always
 
 ## Hibernate Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
